# Chiguiro

./: .gitignore  CLAUDE.md  README.md  chiguiro.allium  meson.build  meson.options
data/: meson.build  org.ninez.Chiguiro.desktop.in.in  org.ninez.Chiguiro.gschema.xml.in  org.ninez.Chiguiro.metainfo.xml.in.in  org.ninez.Chiguiro.service.systemd.in
po/: it.po
spec/: glass-system.allium  particles.allium  terminal-core.allium  window-chrome.allium  window-glass.allium
src/: kgx-about.c  kgx-application.c  kgx-application.h  kgx-colour-utils.c  kgx-edge-burst.c  kgx-edge-draw.c  kgx-edge-draw.h  kgx-edge-private.h  kgx-edge-process.c  kgx-edge.c  kgx-edge.h  kgx-livery.c  kgx-livery.h  kgx-page-expression.ui  kgx-pages.c  kgx-pages.ui  kgx-palette.c  kgx-palette.h  kgx-particle.c  kgx-particle.h  kgx-poxicle-kwin.c  kgx-poxicle-kwin.h  kgx-poxicle.c  kgx-poxicle.h  kgx-process.c  kgx-process.h  kgx-settings-page.c  kgx-settings-page.h  kgx-settings-page.ui  kgx-settings.c  kgx-settings.h  kgx-settings.ui.in  kgx-shared-closures.h  kgx-simple-tab.c  kgx-simple-tab.ui  kgx-sprite.c  kgx-sprite.h  kgx-system-info.c  kgx-tab-strip.c  kgx-tab-strip.h  (+16 more)
src/pids/: kgx-gtop.c  kgx-gtop.h  kgx-pids.c  kgx-pids.h
src/preferences/: kgx-font-picker.c  kgx-font-picker.ui
subprojects/: poxicle
tests/: meson.build  test-livery.c  test-palette.c  test-settings.c  test-shared-closures.c  test-utils.c
