option(
  'devel',
  type: 'boolean',
  value: false,
  description: 'Produce a parallel installable development build',
)

option('tests', type: 'boolean', value: true, description: 'Enable tests')

option(
  'poxicle',
  type: 'boolean',
  value: true,
  description: 'Build the experimental poxicle particle overlay (subsurface backend)',
)
